<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eletric_car"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_carros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carros"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"/>

    <TextView
        android:id="@+id/tv_favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/favoritos"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_carros"
        app:layout_constraintStart_toEndOf="@id/tv_carros"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="328dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/bmw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_carros" />

    <TextView
        android:id="@+id/tv_preco"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/preco"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_image" />

    <TextView
        android:id="@+id/tv_preco_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 200.000,00"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_preco"
        app:layout_constraintTop_toBottomOf="@id/iv_image" />

    <TextView
        android:id="@+id/tv_bateria"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/bateria"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_preco" />

    <TextView
        android:id="@+id/tv_bateria_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="300 kWh"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_bateria"
        app:layout_constraintTop_toTopOf="@id/tv_bateria" />

    <TextView
        android:id="@+id/tv_potencia"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/potencia"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria" />

    <TextView
        android:id="@+id/tv_potencia_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="300 cv"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_potencia"
        app:layout_constraintTop_toTopOf="@id/tv_potencia" />

    <TextView
        android:id="@+id/tv_recarga"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/recarga"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia" />

    <TextView
        android:id="@+id/tv_recarga_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="23 min"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_recarga"
        app:layout_constraintTop_toTopOf="@id/tv_recarga" />

    <EditText
        android:id="@+id/et_ppreco_kwh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:ems="10"
        android:hint="@string/preco_kwh"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recarga_value" />

    <EditText
        android:id="@+id/et_km_pecorrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        android:maxLength="10"
        android:inputType="number"
        android:hint="@string/km_percorrido"
        app:layout_constraintTop_toBottomOf="@id/et_ppreco_kwh"
        app:layout_constraintStart_toStartOf="@id/et_ppreco_kwh"
        app:layout_constraintEnd_toEndOf="@id/et_ppreco_kwh" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/et_km_pecorrido"
        app:layout_constraintEnd_toEndOf="@id/et_km_pecorrido"
        app:layout_constraintStart_toStartOf="@id/et_km_pecorrido" />

</androidx.constraintlayout.widget.ConstraintLayout>
